<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global -->
    <string name="app_name">EstateDroid</string>
    <string name="hello_world">Hello world!</string>
    <!-- Need to be set to proper host name -->
    <string name="base_uri">http://gorog.sch.bme.hu:8080/TestWeb</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logoDescription">EstateDroid logo</string>
    <string name="loading_please_wait">Loading. Please wait&#8230;</string>
    <string name="bad_username">The authentication data is not correct!</string>
    <string name="no_default_data">Missing data</string>
    <string name="connection_problem">Can\'t connect to server</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_own">Own profile</string>
    <string name="action_upload">New Advertisement</string>

    <!-- PrefsActivity -->
    <string name="user_password_info_summary">Username and password information</string>
    <string name="user_password_info_title">Login information</string>
    <string name="user_summary">Please enter your login username</string>
    <string name="user_title">User name</string>
    <string name="password_summary">Enter your password</string>
    <string name="password_title">Password</string>
    <string name="settings_title">Settings</string>
    <string name="refresh_data">Refresh data</string>

    <!-- DataRefreshActivity -->
    <string name="cities_refreshing">The cities are refreshing</string>
    <string name="cities_refreshed">The cities have been refreshed</string>
    <string name="countries_refreshing">The countries are refreshing</string>
    <string name="countries_refreshed">The countries have been refreshed</string>
    <string name="counties_refreshing">The counties are refreshing</string>
    <string name="counties_refreshed">The counties have been refreshed</string>
    <string name="heatings_refreshing">The heatings are refreshing</string>
    <string name="heatings_refreshed">The heatings have been refreshed</string>
    <string name="notificationtypes_refreshing">The notification types are refreshing</string>
    <string name="notificationtypes_refreshed">The notification types have been refreshed</string>
    <string name="offers_refreshing">The offers are refreshing</string>
    <string name="offers_refreshed">The offers have been refreshed</string>
    <string name="parkings_refreshing">The parking types are refreshing</string>
    <string name="parkings_refreshed">The parking types have been refreshed</string>
    <string name="states_refreshing">The state types are refreshing</string>
    <string name="states_refreshed">The state types have been refreshed</string>
    <string name="types_refreshing">The property types are refreshing</string>
    <string name="types_refreshed">The property types have been refreshed</string>

    <!-- SearchActivity -->
    <string name="county">County</string>
    <string name="city">City</string>
    <string name="offer">Offer type</string>
    <string name="heating">Heating</string>
    <string name="parking">Parking</string>
    <string name="state">State</string>
    <string name="type">Property type</string>
    <string name="choose">Choose</string>
    <string name="price">Price (HUF)</string>
    <string name="rent">Rent (HUF)</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>

    <!-- NotificationActivity -->
    <string name="cancel">Cancel</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="jump_to_property">Jump to property</string>
    <string name="jump_to_user">Jump to user</string>

    <!-- UploadActivity -->
    <string name="upload">Upload</string>
    <string name="has_elevator">Has elevator</string>
    <string name="doesnt_have_elevator">Doesn\'t have elevator</string>
    <string name="zipcode">Zip Code</string>
    <string name="street">Street</string>
    <string name="house_number">House number</string>
    <string name="floor">Floor</string>
    <string name="room">Room</string>
    <string name="place">Place</string>
    <string name="rooms">Rooms</string>
    <string name="elevator">Elevator</string>
    <string name="comment">Description</string>
    <string name="use">use</string>
    <string name="coord">Coord.</string>
    <string name="no_location">Location not available</string>
    <string name="error_in_data">Error in the given details</string>

    <!-- FavoriteActivity -->
    <string name="delete">Delete</string>
    <string name="no_favorite">There\'s no favorite saved</string>

    <!-- UserActivity -->
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <string name="telephone">Telephone</string>
    <string name="email">E-mail</string>
    <string name="confirm_dial">Call the advertiser</string>
    <string name="dial">Dial</string>

    <!-- DetailsActivity -->
    <string name="country">Country</string>
    <string name="timestamp">Posted on</string>
    <string name="parentcomment">Response to:</string>
    <string name="addfavorite">Add to favorites</string>

</resources>