<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/action_search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/social_chat"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_notifications"/>
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/rating_favorite"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_favorites"/>
    <item
        android:id="@+id/action_own"
        android:icon="@drawable/social_person"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_own"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>

</menu>