<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/county"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/countyCheckImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="check"
                android:src="@drawable/help" />

            <AutoCompleteTextView
                android:id="@+id/countyTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/city"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/cityCheckImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="check"
                android:src="@drawable/help" />

            <AutoCompleteTextView
                android:id="@+id/cityTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/zipcode"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/zipCheckImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="check"
                android:src="@drawable/help" />

            <AutoCompleteTextView
                android:id="@+id/zipTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/street"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/streetTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/house_number"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/houseNumberTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/floor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/floorTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/room"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/roomTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/coord"
                android:textIsSelectable="false"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/latitudeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:textIsSelectable="false"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/longitudeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:textIsSelectable="false"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/usePositionCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/use"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/offer"
                android:textSize="20sp" />

            <Button
                android:id="@+id/offerChooseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/choose"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/heating"
                android:textSize="20sp" />

            <Button
                android:id="@+id/heatingChooseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/choose"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/parking"
                android:textSize="20sp" />

            <Button
                android:id="@+id/parkingChooseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/choose"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/state"
                android:textSize="20sp" />

            <Button
                android:id="@+id/stateChooseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/choose"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/type"
                android:textSize="20sp" />

            <Button
                android:id="@+id/typeChooseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/choose"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/price"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/priceEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="number|numberSigned"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/rent"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/rentEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="number|numberSigned"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/place"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/placeEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:inputType="numberDecimal|numberSigned"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/rooms"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/roomsEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/elevator"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/elevatorOption"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:entries="@array/elevator"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/comment"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/commentEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>