<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textIsSelectable="true"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/user_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textIsSelectable="true"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/profession"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/professionTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textIsSelectable="true"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/telephone"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/telephoneTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:completionThreshold="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:autoLink="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:autoLink="email" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>